Fix focus state being cut of by overflow: hidden in social fields

--- a/packages/slate-renderer/src/elements/Contact/SocialField.scss
+++ b/packages/slate-renderer/src/elements/Contact/SocialField.scss
@@ -17,7 +17,7 @@
             width: 100%;
             text-decoration: none;
             padding: 0 $spacing-half;
-            margin: 0 (-$spacing-half);
+            // margin: 0 (-$spacing-half);
             border-radius: $border-radius-base;
 
             &,
