--- a/packages/slate-renderer/src/elements/Contact/SocialFields.scss
+++ b/packages/slate-renderer/src/elements/Contact/SocialFields.scss
@@ -3,9 +3,9 @@
 
 .prezly-slate {
     &-social-fields {
+        margin: 0;
         padding: 0;
         columns: 2;
-        margin: -$focus-state-size 0;
 
         @media (max-width: $screen-xs) {
             columns: 1;
@@ -13,7 +13,7 @@
 
         &__field {
             margin-bottom: $spacing-1 - $focus-state-size * 2;
-            padding: $focus-state-size 0;
+            padding: $focus-state-size;
         }
     }
 }
